--- a/src/global.css
+++ b/src/global.css
@@ -23,4 +23,38 @@
     background-color: var(--background-color);
     color: var(text-secondary); /* Define o texto padrão como preto */
   }
+
+  .header {
+    border-bottom: 2px solid rgb(229, 229, 229);
+  }
+
+  .header .nav-link {
+    font-weight: 600;
+    color: #555 !important;
+    padding: 28px 1.5rem !important;
+    border-bottom: 2px solid transparent;
+  }
+
+  .header .nav-link:hover {
+    border-bottom: 2px solid var(--primary);
+  }
+
+  .header .nav-link .icon-lg {
+    font-size: 22px;
+  }
   
+
+  .header .dropdown:hover > .dropdown-menu {
+    display: block;
+  }
+  
+  .header .dropdown-menu {
+    box-shadow: rgb(0, 0, 0, 0.08) 0px 4px 16px 0px rgb(0, 0, 0, 0.06) 0px 2px 6px 0px;
+    border: 1px solid #eee;
+  }
+
+  .header .dropdown-menu .dropdown-item {
+    padding: 10px 15px;
+    font-weight: 600;
+    color: #444;
+  }
