--- a/src/global.css
+++ b/src/global.css
@@ -58,3 +58,17 @@
     font-weight: 600;
     color: #444;
   }
+
+ .logo-mobile {
+  max-height: 50px;
+ }
+
+ .menu-mobile  .MuiListItemText-primary{
+    font-weight: 600;
+    color: #444;
+ }
+
+ .menu-mobile  sgv {
+  font-size: 22px;
+  color: #444;
+ }
